--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SPEECH_KEY=06e1aca5a5344b599073ec1bc1a6703b
-SPEECH_REGION=eastus
-SPEECH_ENDPOINT=https://eastus.api.cognitive.microsoft.com/
-AI_SERVICE_ENDPOINT=https://iitroorkee.cognitiveservices.azure.com/
-AI_SERVICE_KEY=49c12f08e47a4688a85cbf2b707a3882
-GEMINI_API_KEY=AIzaSyACxvRq8Y5dveg8EncOa1h2xgo1TCKFws8
+SPEECH_KEY=your_key
+SPEECH_REGION=your_region
+SPEECH_ENDPOINT=your_endpoint
+AI_SERVICE_ENDPOINT=your_endpoint
+AI_SERVICE_KEY=your_key
+GEMINI_API_KEY=key
